--- a/Challenges/Day 10 - Card Hover Effects/css/style.css
+++ b/Challenges/Day 10 - Card Hover Effects/css/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
 body{
@@ -26,7 +27,7 @@ body{
   max-width: 300px;
   height: 215px; 
   background: #ffffff;
-  margin: 50px 10px;
+  margin: 200px 10px;
   padding: 20px 15px;
   display: flex;
   align-items: center;
